# AI-powered-Linera-Markets

./: .replit  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  replit.md  run.bash  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
api/: _db.ts  _linera.ts  ai-create.ts  ai-generate.ts  create-market.ts  debug.ts  get-market.ts  get-markets.ts  health.ts  linera-stats.ts  markets.ts  trade.ts
attached_assets/: Pasted-21-09-03-342-Running-build-in-Washington-D-C-USA-East-i_1770027244237.txt  Pasted-22-00-05-131-Running-build-in-Washington-D-C-USA-East-i_1770030117799.txt  Pasted-22-05-24-650-Running-build-in-Washington-D-C-USA-East-i_1770030545935.txt  Pasted-22-18-47-463-Running-build-in-Washington-D-C-USA-East-i_1770031268827.txt  Pasted-22-25-15-701-Running-build-in-Washington-D-C-USA-East-i_1770031734576.txt  Pasted-22-43-30-874-Running-build-in-Washington-D-C-USA-East-i_1770032738006.txt  Pasted-22-53-38-788-Running-build-in-Washington-D-C-USA-East-i_1770033363114.txt  Pasted-22-59-23-062-Running-build-in-Washington-D-C-USA-East-i_1770033659010.txt  Pasted-23-09-21-743-Running-build-in-Washington-D-C-USA-East-i_1770034266346.txt  (+10 more)
client/: index.html
contracts/: Cargo.toml  README.md  deploy.sh
contracts/amm/: Cargo.toml
contracts/amm/src/: lib.rs
contracts/bot/: Cargo.toml
contracts/bot/src/: lib.rs
contracts/market/: Cargo.toml
contracts/market/src/: contract.rs  lib.rs  service.rs  state.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
server/: index.ts
shared/: schema.ts
(+31 files in other folders)
