[workspace]
resolver = "2"
members = [
    "market",
    "oracle",
    "amm",
    "bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
linera-sdk = "0.14"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "2.0"
