[workspace]
resolver = "2"
members = [
    "market",
    "oracle",
    "amm",
    "bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
linera-sdk = "0.15"
async-graphql = "7.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
